Serena: add more to projects

--- a/serena.html
+++ b/serena.html
@@ -242,7 +242,32 @@
                         </a>
                     </div>
 
-                    <div id="fruition" class="project-item"
+                    <div class="project-item">
+                        <a href="https://github.com/serenalau272/profile-web" target="_blank">
+                            <div class="project-scaffold">
+                                <div class="imagebox">
+                                    <img class="project-image" style="float: left;" src="serena/assets/profile-web.png">
+                                </div>
+                                <div class="project-descript" style="float: right;">
+                                    <h3 class="mb-0">Portfolio Website</h3>
+                                    <hr style="margin: 5px;" />
+                                    A new personal portfolio website I designed from scratch using Figma.<b><i> Currently still in progress.</i></b>
+                                    <br>
+                                    <br>
+                                    Click here to see the Github repository for the project.
+                                    <br>
+                                    <i class="stack-icon fas fa-solid fa-layer-group"></i>
+                                    <b>React and TypeScript</b>
+                                    <br>
+                                    <br>
+                                    <div class="flex-shrink-0"><span class="date">Mar 2022 - Present</span></div>
+                                </div>
+
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="project-item"
                         title="https://www.youtube.com/embed/seEOX0T1l30?rel=0&autoplay=1&mute=1">
                         <a href="https://github.com/serenalau272/Investment-Info" target="_blank">
                             <div class="project-scaffold">
