Serena: more changes

--- a/serena.html
+++ b/serena.html
@@ -54,9 +54,9 @@
                     <p class="lead mb-5">I have a keen passion for innovative solutions in software development, always looking for challenges to push myself further. I'm driven by curiosity and ambition, and I also value building lasting relationships and helping out others wherever I can. Away from the workstation, I love diving into classical music and having a good laugh with friends over sports or a hearty meal. 
                     </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/serena-lau-2166111a0/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/serenalau272"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://www.facebook.com/serena.lau.351/"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/serena-lau-2166111a0/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/serenalau272" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/serena.lau.351/" target="_blank"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
@@ -70,7 +70,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">The University of Auckland</h3>
                             <div class="subheading mb-3">Bachelor of Engineering (HONS)</div>
-                            <div>Majoring in Software Engineering 
+                            <div>Specialising in Software Engineering 
                             </div>
                             <p> Offered University of Auckland Top Achiever Scholarship </p>
                             <p>Clubs and Societies: Student Life, Software Engineering Student Association, Web Development & Consultancy Club, Devs Society</p>
@@ -127,7 +127,7 @@
                                 <li>Worked with a highly professional and customer-oriented team</li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">April 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Mar 2021 - Nov 2021</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
