Serena: fixed projects more

--- a/serena.html
+++ b/serena.html
@@ -246,9 +246,9 @@
                         <a href="https://github.com/serenalau272/profile-web" target="_blank">
                             <div class="project-scaffold">
                                 <div class="imagebox">
-                                    <img class="project-image" style="float: left;" src="serena/assets/profile-web.png">
+                                    <img class="project-image" style="float: right;" src="serena/assets/profile-web.png">
                                 </div>
-                                <div class="project-descript" style="float: right;">
+                                <div class="project-descript" style="float: left;">
                                     <h3 class="mb-0">Portfolio Website</h3>
                                     <hr style="margin: 5px;" />
                                     A new personal portfolio website I designed from scratch using Figma.<b><i> Currently still in progress.</i></b>
