Serena: tidy ups

--- a/serena.html
+++ b/serena.html
@@ -256,8 +256,7 @@
                         </a>
                     </div>
 
-                    <div class="project-item"
-                        title="https://www.youtube.com/embed/seEOX0T1l30?rel=0&autoplay=1&mute=1">
+                    <div class="project-item">
                         <a href="https://github.com/serenalau272/Investment-Info" target="_blank">
                             <div class="project-scaffold">
                                 <div class="project-descript" style="width: 100%">
