Serena - update experience section

--- a/serena.html
+++ b/serena.html
@@ -120,6 +120,18 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Test Champion</h3>
+                            <div class="subheading mb-3">Flipview</div>
+                            <ul>
+                                <li>Test product in live environment and investigate bug causes in the codebase</li>
+                                <li>Collaborate with development team to suggest and implement software fixes</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2022 - Present</span></div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Retail Assistant</h3>
                             <div class="subheading mb-3">AS Colour</div>
                             <ul>
