--- a/serena.html
+++ b/serena.html
@@ -96,6 +96,20 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">System Analyst</h3>
+                            <div class="subheading mb-3">Flipview</div>
+                            <ul>
+                                <li>Suggested and lead re-implementation of test case management in Jira</li>
+                                <li>Collaborate with development team to identify and implement software fixes</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">April 2022 - Present</span></div>
+                    </div>
+
+
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer Intern</h3>
@@ -116,18 +130,6 @@
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2021 - February 2022</span></div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Test Champion</h3>
-                            <div class="subheading mb-3">Flipview</div>
-                            <ul>
-                                <li>Test product in live environment and investigate bug causes in the codebase</li>
-                                <li>Collaborate with development team to suggest and implement software fixes</li>
-                            </ul>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">April 2022 - Present</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
