Update all info, James Harden

--- a/nick.html
+++ b/nick.html
@@ -65,7 +65,7 @@
                     <a href="mailto:thenickys123@gmail.com">thenickys123@gmail.com</a>
                 </div>
 
-                <p class="lead mb-5">I am a highly motivated and hardworking person, who recently stuyding second year Software Engineering in the University of Auckland. I’m an individual who can perform well under pressure and work well when working with teams’ members. I am currently seeking an opportunity to enhance my experience and skills in a new environment.</p>
+                <p class="lead mb-5">I am a highly motivated and hardworking person, who is currently studying third-year Software Engineering at the University of Auckland. I’m an individual who can perform well under pressure and work well when working with team members. I am currently seeking an opportunity to enhance my experience and skills in a new environment.</p>
 
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/nick-huang-bacon/" target="_blank"><i
@@ -89,8 +89,8 @@
                         <h3 class="mb-0">The University of Auckland</h3>
                         <div class="subheading mb-3">Bachelor of Engineer Honours</div>
                         <div>Software Engineering</div>
-                        <div>Clubs | Web Development & Consultancy Club, Software Engineering Student Association</div>
-                        <p>GPA: 8.625</p>
+                        <div>Clubs | Robogals, Web Development & Consultancy Club, Software Engineering Student Association</div>
+                        <p>GPA: 8.75</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Mar 2020 - Present</span></div>
                 </div>
@@ -114,34 +114,15 @@
                 <h2 class="mb-5">Experience</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Fullstack Developer Intern</h3>
-                        <div class="subheading mb-3"><a href="https://www.smarterwater.co.nz/" target="_blank">Sandfield
-                                Associates Limited</a></div>
-                        - Led and developed 4 automation projects in Google AppScript, SQL, C# <br />
-                        - Migrated company API to .NET Core 6 in C#<br />
-                        - Implemented OAuth2 flows for company APIs in C#<br />
-                        - Extended the development of a chatbot webhook to connect with server data in SQL and C#<br />
-                        - Developed frontend prototype for a registered client
+                        <h3 class="mb-0">Summer Research Scholarship</h3>
+                        <div class="subheading mb-3">The University of Auckland</div>
+                        <ul>
+                            <li>Developed an AR (Augmented Reality) app using <b>C#</b> and <b>Unity</b></li>
+                            <li>This app is a communication tool for farmers and workers in vinyard</li>
+                            <li>Easily communicate instructions to workers and improve quality of work done by workers in the field</li>
+                        </ul>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">Nov 2021 - Present</span></div>
-                </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">Research and Development Intern</h3>
-                        <div class="subheading mb-3"><a href="https://www.smarterwater.co.nz/" target="_blank">Hynds
-                                Smarterwater</a></div>
-                        - Design and execution of lab scale and on-site R&D experiments in topics including: sensing
-                        technology for remote monitor of water infrastructure, wireless data capturing and transmission,
-                        data interpretation and analytics. <br />
-                        - Responsible for site surveys and input for digital representation of water infrastructure
-                        assets.<br />
-                        - Development and continual improvement of algorithms to perform remote monitoring of water
-                        infrastructure asset condition<br />
-                        - Proactive participation in safety conversations, risk assessment exercises, and adhesion to
-                        health & safety and policies.<br />
-                    </div>
-                    <div class="flex-shrink-0"><span class="text-primary">Dec 2020 - Feb 2021 <br /> & Jan 2020 - Feb
-                            2020</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">Dec 2021 - Feb 2022</span></div>
                 </div>
             </div>
         </section>
@@ -207,10 +188,16 @@
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
+                        <div><em><b>Part 2 Engineering (2nd year)</b></em></div>
+                        Deans Honour List (top 5% of cohort) <br />
+                        First in Course | COMPSYS 201 – Fundamentals of Computer Engineering <br />
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
                         <div><em><b>Part 1 Engineering (1st year)</b></em></div>
                         Deans Honour List (top 5% of cohort) <br />
-                        First in Course | ENGSCI 111: Mathematical Modelling 1 <br />
-                        First in Course | ENGGEN 131: Introduction to Engineering Computation and Software Development <br />
+                        First in Course | ENGSCI 111 – Mathematical Modelling 1 <br />
+                        First in Course | ENGGEN 131 – Introduction to Engineering Computation and Software Development <br />
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
@@ -232,7 +219,7 @@
                         <div class="subheading mb-3">Volunteer</div>
                             <p>Robogals Auckland is a student-run club based at The University of Auckland. A non-profit global organization, Robogals has chapters all throughout Australia, Asia, Europe and America.</p>
 
-                            <p>We aim to inspire, empower and educate youth to pursue STEM and promote diversity of the STEM field. We achieve this by running fun, interactive workshops in Primary and Secondary Schools throughout Auckland, using our lego mindstorm robots.</p>
+                            <p>We aim to inspire, empower and educate youth to pursue STEM and promote diversity of the STEM field. We achieve this by running fun, interactive workshops in Primary and Secondary Schools throughout Auckland.</p>
                         <div class="social-icons-sm">
                             <a class="social-icon-sm" href="https://www.linkedin.com/company/robogals-auckland/" target="_blank"><i
                                     class="fab fa-linkedin-in"></i></a>
