--- a/nick.html
+++ b/nick.html
@@ -117,7 +117,7 @@
                         <h3 class="mb-0">Summer Research Scholarship</h3>
                         <div class="subheading mb-3">The University of Auckland</div>
                         <ul>
-                            <li>Developed an AR (Augmented Reality) app using <b>C#</b> and <b>Unity</b></li>
+                            <li>Developed an AR (Augmented Reality) app using <b>C#</b>, <b>Unity</b> and MRTK</li>
                             <li>This app is a communication tool for farmers and workers in vinyard</li>
                             <li>Easily communicate instructions to workers and improve quality of work done by workers in the field</li>
                         </ul>
@@ -131,20 +131,24 @@
         <!-- Projects-->
         <section class="resume-section" id="projects">
             <div class="resume-section-content">
-                <h2 class="mb-5">Projects</h2>
+                <h2 class="mb-5">Featured Projects</h2>
 
                 <div class="project-item">
                     <a href="https://github.com/Bac0nEater/CPP-Games" target="_blank">
                         <div class="project-scaffold">
                             <div class="imagebox">
-                                <img class="project-image" src="nick/assets/cpp_games.jpg">
+                                <img class="project-image" style="float: left;" src="nick/assets/cpp_games.jpg">
                             </div>
-                            <div class="project-descript">
+                            <div class="project-descript" style="float: right;">
                                 <h3 class="mb-0">C++ game programming</h3>
                                 <hr style="margin: 5px;" />
-                                Using C++ and SFML to create some simple single player PC games like "Timber", "Pong" and "Zombie Arena".
-                                <br> <br>Click here to see the Github repository for the project.
-                                <br /><br />
+                                Created some simple single player PC games like "Timber", "Pong" and "Zombie Arena" using C++ and SFML, an API.
+
+                                <br>
+                                <i class="stack-icon fas fa-solid fa-terminal"></i>
+                                <b>C++</b>
+                                <br>
+                                <i class="click-text">Click to see the Github repository for the project.</i>
                                 <div class="flex-shrink-0"><span class="date">Nov 2020 - PRESENT</span></div>
                             </div>
 
@@ -167,8 +171,11 @@
                                 useless things such as gifs, puns, and videos. Users are able to submit their own content to be added
                                 into our database as future search results.
 
-                                <br> <br>Click here to see the Github repository for the project.
-                                <br /><br />
+                                <br>
+                                <i class="stack-icon fas fa-solid fa-terminal"></i>
+                                <b>MongoDB, Node, JavaScript, HTML and CSS</b>
+                                <br>
+                                <i class="click-text">Click to see the Github repository for the project.</i>
                                 <div class="flex-shrink-0"><span class="date">Jul 2021 - Aug 2021</span></div>
                             </div>
 
