Forgot to add link

--- a/nick.html
+++ b/nick.html
@@ -117,9 +117,10 @@
                         <h3 class="mb-0">Summer Research Scholarship</h3>
                         <div class="subheading mb-3">The University of Auckland</div>
                         <ul>
-                            <li>Developed an AR (Augmented Reality) app using <b>C#</b>, <b>Unity</b> and MRTK</li>
-                            <li>This app is a communication tool for farmers and workers in vinyard</li>
-                            <li>Easily communicate instructions to workers and improve quality of work done by workers in the field</li>
+                            <li>Developed an AR (Augmented Reality) app using <b>C#</b>, <b>Unity</b> and MRTK.</li>
+                            <li>This app is a communication tool for farmers and workers in vinyard.</li>
+                            <li>Easily communicate instructions to workers and improve quality of work done by workers in the field.</li>
+                            <li><a href="https://youtu.be/zem3tXcWnH8" target="_blank">Prototype</a> <- This prototype is one of the final versions of the AR app that I developed.</li>
                         </ul>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Dec 2021 - Feb 2022</span></div>
