--- a/john.html
+++ b/john.html
@@ -86,11 +86,13 @@
                         <h3 class="mb-0">The University of Auckland</h3>
                         <div class="subheading mb-3">Bachelor of Engineer Honours</div>
                         <div>Software Engineering</div>
-                        <div>Clubs & Societies | Student Life (Committed Student Leader), Unichurch (President), Google
+                        <div>Clubs & Societies | Student Life, Unichurch, Google
                             Developer Student Club, Devs Society,
+                            Taiwanese And New Zealand Student Association,
+                            Kiwi Asian Club,
                             Web Development & Consultancy Club, Unleashed Space, Software Engineering Student
                             Association</div>
-                        <p>GPA: 9.0</p>
+                        <p>GPA: 8.92/9.0 (A+/A+)</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Mar 2020 - Present</span></div>
                 </div>
@@ -117,14 +119,20 @@
                 <h2 class="mb-5">Experience</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
+                        <h3 class="mb-0">Software Intern</h3>
+                        <div class="subheading mb-3"><a href="https://www.smarterwater.co.nz/" target="_blank">Optiver</a></div>
+                        - Led and completed a full stack project in C# and C++ which improved trader’s ability to trade options effectively, with features rolled into production by the end of my internship. </br>
+                        - Developed a functioning autotrader in C++ which connected to real market data and traded against other entities on a simulated market with risk mechanisms in place. Methodologies employed include multi-level quoting, and mechanisms to flatten and retreat. 
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">Nov 2022 - Feb 2023</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
                         <h3 class="mb-0">Fullstack Developer Intern</h3>
                         <div class="subheading mb-3"><a href="https://www.smarterwater.co.nz/" target="_blank">Sandfield
                                 Associates Limited</a></div>
-                        - Led and developed 4 automation projects in Google AppScript, SQL, C# <br />
-                        - Migrated company API to .NET Core 6 in C#<br />
-                        - Implemented OAuth2 flows for company APIs in C#<br />
-                        - Extended the development of a chatbot webhook to connect with server data in SQL and C#<br />
-                        - Developed frontend prototype for a registered client
+                        - Worked with numerous clients, taking on considerable responsibility to elicit client interests, manage client relations, and provide novel and unique solutions to meet their needs. Solutions developed in C#, SQL, Typescript, and Sass. </br>
+                        - Migrating existing .NET Framework APIs to .NET Core 6 support.
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Nov 2021 - Present</span></div>
                 </div>
@@ -154,7 +162,6 @@
         <section class="resume-section" id="projects">
             <div class="resume-section-content">
                 <h2 class="mb-5">Featured Projects</h2>
-
                 <!-- Porkroll, YTech NZ, KK -->
                 <div class="project-item">
                     <a href="https://website-puce-nine.vercel.app/" target="_blank">
@@ -357,9 +364,21 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
+                    <div><em><b>Part 3 Engineering</b></em></div>
+                    Deans Honour List (top 5% of cohort) <br />
+                    First in Course | COMPSYS 306 – Artificial Intelligence and Machine Learning <br />
+                    First in Course | SOFTENG 351 – Fundamentals of Database Systems <br />
+                    First in Course | SOFTENG 370 – Operating Systems <br />
+                    People's Choice in Software Engineering Design 2 – Nolo <a
+                        href="https://github.com/johnchen383/nolo" target="_blank">(see
+                        repository)</a><br />
+                </li>
+                <li>
+                    <span class="fa-li"><i class="fas fa-star text-warning"></i></span>
                     <div><em><b>Part 2 Engineering</b></em></div>
                     Deans Honour List (top 5% of cohort) <br />
                     First in Course | SOFTENG 281 – Object-Oriented Programming <br />
+                    First in Course | SOFTENG 284 – Data Structures and Algorithms <br />
                     First in Course | COMPSYS 201 – Fundamentals of Computer Engineering <br />
                     People's Choice in Software Engineering Design 1 – Kēmu Kupu <a
                         href="https://github.com/johnchen383/kemu_kupu" target="_blank">(see
